--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
       <!-- the button to add a task -->
       <div class="add-task">
         <form action="/tasks" method="POST" id="tasksform">
-          <button type="submit" name="task" class="task-button"><i class="fal fa-pen"></i> add a task</button>
+          <button type="submit" name="task" class="task-button"><i class="far fa-edit"></i> add a task</button>
         </form>
       </div>
 
