--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -23,14 +23,17 @@ body {
   color: $primary-color;
   text-transform: lowercase;
   letter-spacing: 0.5px;
+  background-color: #69A4FE;
 
   h5 {
     color: #244751;
     font-size: 1.2em;
+    padding-left: 7%;
   }
 
   ul {
-    padding: 0;
+    padding-left: 10%;
+    margin-top: -2%;
     list-style-type: none;
   }
 
@@ -50,93 +53,115 @@ body {
   }
 
   a {
-    color:inherit;
-    text-decoration:none;
-    -webkit-transition:all .4s ease-out;
-    transition:all .4s ease-out;
+    color: inherit;
+    text-decoration: none;
+    -webkit-transition: all .4s ease-out;
+    transition: all .4s ease-out;
   }
 
   a:hover {
     color: #69A4FE!important;
   }
 
+  img {
+    //position: relative;
+    display: block;
+    float: right;
+    height: 60px;
+    margin: auto;
+    margin-top: 2%;
+    margin-right: 1.2%;
+  }
+
 }
 
 // main body stuff
-aside {
-  position:fixed;
-  left:788px;
-  right:0;
-  top:0;
-  bottom:0;
-  padding:124px 48px 124px 107px;
-  min-width:100px;
-  background-color:#69A4FE;
-
-  img {
-    position: absolute;
-    height: 100px;
-    margin-top: 50px;
-    margin-left: 1275px;
-  }
-
-}
 
 .container {
   background-color: #EEF4FF;
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 90%;
-  margin-bottom: 2%;
+  display: inline-block;
+  // flex-direction: column;
+  // justify-content: flex-start;
+  // align-items: center;
+  width: 95%;
+  height: 100vh;
 
   .add-task {
-    position: absolute;
-    width: 220px;
-    height: 64px;
-    left: 880px;
-    top: 65px;
+    // position: absolute;
+    width: 200px;
+    height: 60px;
+    float: right;
+    margin-top: 2%;
+    margin-right: 5%;
     background: linear-gradient(90deg, #3d75c9 0%, #69a4fe 73.7%);
-    border-radius: 20px;
+    border-radius: 50px;
+  }
+
+  .add-task:hover {
+    box-shadow: 8px 8px 8px #c4dcff;
+    transition:all .3s linear;    
+    -webkit-transition:all .3s linear;
+    -o-transition:all .3s linear;
+    -moz-transition:all .3s linear;    
+  }
+
+  button {
+    margin-top: 10%;
+    background-color: inherit;
+    border: 0px;
+    margin-left: 1%;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 1.1em;
+    width: 180px;
+  }
+
+  i {
+    padding-right: 7%;
   }
 
   .cards {
-    width: 50%;
-    display:flex;
-    flex-direction:row;
+    width: 80%;
+    display: flex;
+    padding-top: 10%;
+    padding-left: 10%;
+    flex-direction: column;
     justify-content: space-between;
   }
 
   .to-watch {
     width: 430px;
-    height: 155px;
+    margin-bottom: 2%;
+    height: 125px;
     background: #ffffff;
-    box-shadow: 8px 8px 10px #dfecff;
+    box-shadow: 8px 8px 8px #c4dcff;
     border-radius: 25px;
   }
 
   .to-eat {
     width: 430px;
-    height: 155px;
+    height: 125px;
+    margin-bottom: 2%;
     background: #ffffff;
-    box-shadow: 8px 8px 10px #dfecff;
+    box-shadow: 8px 8px 8px #c4dcff;
     border-radius: 25px;
   }
 
   .to-read {
     width: 430px;
-    height: 155px;
+    height: 125px;
+    margin-bottom: 2%;
     background: #ffffff;
-    box-shadow: 8px 8px 10px #dfecff;
+    box-shadow: 8px 8px 8px #c4dcff;
     border-radius: 25px;
   }
 
   .to-buy {
     width: 430px;
-    height: 155px;
+    height: 125px;
+    margin-bottom: 2%;
     background: #ffffff;
-    box-shadow: 8px 8px 10px #dfecff;
+    box-shadow: 8px 8px 8px #c4dcff;
     border-radius: 25px;
   }
 
