--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     <!-- sidebar w/ profile icon -->
     <div class="sidebar">
       <aside>
-        <a href=""><img src="https://i.ibb.co/55wr5sW/profile-icon.png" alt="profile-icon"></a>
+        <a href="/edit"><img src="https://i.ibb.co/55wr5sW/profile-icon.png" alt="profile-icon"></a>
       </aside>
     </div>
 
@@ -34,6 +34,7 @@
           <button type="submit" name="task" class="task-button"><i class="far fa-edit"></i> add a task</button>
         </form>
       </div>
+      
 
       <!-- the div for the 4 category cards -->
       <div class="cards">
@@ -48,7 +49,6 @@
           <!-- this will eventually be a section like this:
           <section class="to-watch-list"></section> -->
         </div>
-
         <!-- this is the to eat card -->
         <div class="to-eat">
           <h5>places to eat</h5>
