--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
       <!-- the button to add a task -->
       <div class="add-task">
         <form action="/:id" method="POST" id="tasksform">
-          <button type="submit" name="task" class="task-button"><i class='far fa-edit fa-lg'></i> <textarea name="text" placeholder="add a task"></textarea></button>
+          <button type="submit" name="task" class="task-button"><i class="fas fa-feather fa-lg"></i><textarea name="text" placeholder="add a task" id="task-test"></textarea></button>
         </form>
       </div>
       
@@ -41,7 +41,6 @@
 
         <!-- this is the to watch card -->     
         <section class="category-card">
-
         </section>
         <!-- this is the to eat card -->
         <div class="category-card">
