separates out scss into different files

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -74,115 +74,17 @@ body {
     width: 5%;
     background-color:#69A4FE;
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    align-items: flex-start;
 
     img {
-      height: 60px;
-      // right: 0;
-      // left: 0;
-      margin-top: 50%;
+      height: 50px;
+      width: 50px;
+      margin-top: 55%;
+      margin-left: -25%;
     }
   }
 }
 
-// main body stuff
 
-.container {
-  background-color: #EEF4FF;
-  display: inline-block;
-  // flex-direction: column;
-  // justify-content: flex-start;
-  // align-items: center;
-  width: 95%;
-  height: 100vh;
-
-  }
-
-  .add-task {
-    // position: absolute;
-    float: right;
-    width: 220px;
-    height: 60px;
-    display: flex;
-    flex-direction: row;
-   
-    margin-top: 2%;
-    margin-right: 5%;
-    background: linear-gradient(90deg, #3d75c9 0%, #69a4fe 73.7%);
-    border-radius: 50px;
-
-    textarea {
-      resize: none;
-      // margin-top: 1em;
-      width: 100%;
-      height: 28px;
-      border: 0px;
-      font-family: $font-stack;
-      font-size: 1em;
-      font-weight: 400px;
-      background-color: inherit;
-      padding-left: 10%;
-      margin-top: 8%;
-    }
-
-
-    ::placeholder {
-      font-weight: 400;
-      color: #ffffff;
-    }
-
-    button {
-      margin-top: 10%;
-      background-color: inherit;
-      border: 0px;
-      margin-left: 1%;
-      color: #ffffff;
-      font-weight: 500;
-      font-size: 1.1em;
-      width: 50px;
-      margin-left: 5%;
-  
-      i {
-        padding-right: 5%;
-        padding-left: 10%;
-      }
-    }
-  }
-
-  .add-task:hover {
-    box-shadow: 8px 8px 8px #c4dcff;
-    transition:all .3s linear;    
-    -webkit-transition:all .3s linear;
-    -o-transition:all .3s linear;
-    -moz-transition:all .3s linear;    
-  }
-
-  
-
-  .cards {
-    width: 75%;
-    height: 75%;
-    display: flex;
-    padding-top: 10%;
-    padding-left: 15%;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: space-between;
-  }
-
-  .category-card {
-    width: 430px;
-    margin-bottom: 2%;
-    height: 300px;
-    background: #ffffff;
-    border-radius: 25px;
-  }
-
-  .category-card:hover {
-    box-shadow: 8px 8px 8px #c4dcff;
-    transition:all .3s linear;    
-    -webkit-transition:all .3s linear;
-    -o-transition:all .3s linear;
-    -moz-transition:all .3s linear;
-  }
