--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -24,6 +24,14 @@ $primary-color: #1655b4;
     background: #ffffff;
     border-radius: 25px;
   }
+
+  .category-card1 {
+    width: 300px;
+    margin-bottom: 3%;
+    height: 250px;
+    background: #ffffff;
+    border-radius: 25px;
+  }
   
   .category-card:hover {
     box-shadow: 8px 8px 8px #c4dcff;
