--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -53,6 +53,13 @@ body {
     color:rgb(190,190,190);
   }
 
+  #result {
+    padding-left: 10%;
+    margin-top: -2%;
+    list-style-type: none;
+
+  }
+
   a {
     color: inherit;
     text-decoration: none;
