--- a/styles/main-html.scss
+++ b/styles/main-html.scss
@@ -6,18 +6,17 @@ $primary-color: #1655b4;
 // main body stuff
 
 .container {
-background-color: #EEF4FF;
-display: inline-block;
-// flex-direction: column;
-// justify-content: flex-start;
-// align-items: center;
-width: 92%;
-height: inherit;
+  background-color: #EEF4FF;
+  display: inline-block;
+  // flex-direction: column;
+  // justify-content: flex-start;
+  // align-items: center;
+  width: 92%;
+  height: inherit;
 
 }
 
 .add-task {
-  // position: absolute;
   float: right;
   width: 220px;
   height: 60px;
@@ -31,7 +30,6 @@ height: inherit;
 
   textarea {
     resize: none;
-    // margin-top: 1em;
     width: 45%;
     height: 18px;
     border: 0px;
@@ -63,6 +61,13 @@ height: inherit;
     i {
       margin-right: 5%;
       margin-left: 10%;
+    }
+
+    i:hover {
+      color: #1655b4;
+      -webkit-transition:all .3s linear;
+      -o-transition:all .3s linear;
+      -moz-transition:all .3s linear;  
     }
   }
 }
