--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,6 @@
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
-    <script type="text/javascript" src="/scripts/client.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -42,12 +41,31 @@
       <!-- the div for the 4 category cards -->
       <div class="cards">
 
-        <!-- this is the to watch card -->     
-        <div class="category-card">
-          <section class="to-watch-list">
-            
-          </section>
-        </div>
+      <!-- this is the to watch card -->     
+        <section class="category-card1">
+          <h5>things to buy</h5>
+              <div id="result"></div>
+              <ul>
+                <script>
+                $(document).ready(() => {
+                  $.ajax({
+                    method:'GET',
+                    url: "/tasks",
+                    success: (data) => {
+                      console.log(data);
+                      const result = [];
+                      for (const task of data) {
+                        console.log(task.name);
+                        result.push(`<li>${task.name}</li>`);
+                        $("#result").html(result).appendTo('.category-card1');
+                      }
+                    },
+                  });
+                })
+              </script>  
+            </ul>
+                     
+        </section>
         <!-- this is the to eat card -->
         <div class="category-card">
           <h5>places to eat at</h5>
