--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
     <main class="container">
       <!-- the button to add a task -->
       <div class="add-task">
-        <form action="/:id" method="POST" id="tasksform">
+        <form action="/tasks" method="POST" id="tasksform">
           <button type="submit" name="task" class="task-button"><i class='far fa-edit fa-lg'></i> <textarea name="text" placeholder="add a task"></textarea></button>
         </form>
       </div>
