adds scrollbar and styling

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -7,6 +7,7 @@ $primary-color: #1655b4;
 // global styles
 html {
   box-sizing: border-box;
+  overflow: hidden;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -93,5 +94,3 @@ body {
     }
   }
 }
-
-
