--- a/styles/main-html.scss
+++ b/styles/main-html.scss
@@ -30,11 +30,12 @@ $primary-color: #1655b4;
 
   textarea {
     resize: none;
-    width: 45%;
-    height: 18px;
+    width: 50%;
+    height: 20px;
     border: 0px;
     font-family: $font-stack;
-    font-size: 1em;
+    color: #ffffff;
+    font-size: 0.9em;
     font-weight: 400px;
     background-color: inherit;
     margin-left: 15%;
