--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -5,20 +5,20 @@ $font-stack: 'Inter', sans-serif;
 $primary-color: #1655b4;
 
 .cards {
-  width: 65%;
+  width: 75%;
   height: 100%;
   display: flex;
   margin-top: 10%;
-  margin-left: 10%;
+  margin-left: 8%;
   padding-bottom: 10%;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: space-between;
 }
   
 .category-card {
-  width: 300px;
+  width: 350px;
   margin-bottom: 3%;
   height: 250px;
   background: #ffffff;
