--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -25,6 +25,7 @@ $primary-color: #1655b4;
   border-radius: 0px;
   overflow: hidden;
   overflow-y: auto;
+  word-wrap: break-word;
 }
   
 .category-card:hover {
