working post route after 2.5hrs with mentor

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -7,7 +7,7 @@ $primary-color: #1655b4;
 // global styles
 html {
   box-sizing: border-box;
-  overflow: hidden;
+  // overflow: hidden;
 }
 *, *:before, *:after {
   box-sizing: inherit;
