updates app.js with some of andy's material

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,8 +38,7 @@
     <!-- the button to add a task -->
     <div class="add-task">
       <!-- <form action="/tasks" method="POST" id="tasksform">  -->
-        <textarea name="text-box" id="text-box" >sdsddsas</textarea>
-      <textarea name="text" id="task-test-1">abc</textarea>
+        <textarea name="text-box" id="text-box"></textarea>
       <button name="task" class="task-button"><i class="fas fa-feather fa-lg"></i></button>
       <!-- </form> -->
     </div>
