--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <title>to-do</title>
-
+  <!-- Meta Information -->
   <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
   <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
   <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
   <link rel="stylesheet" href="/styles/main-html.css" type="text/css" />
   <link rel="stylesheet" href="/styles/cards.css" type="text/css" />
-
-  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-  <script type="text/javascript" src="/scripts/app.js"></script>
-
-
+  <!-- App CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-sortablejs@latest/jquery-sortable.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.13.0/Sortable.min.js"></script>
-
+  <!-- App JS -->
+  <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
+  <script type="text/javascript" src="/scripts/app.js"></script>
+  <script type="text/javascript" src="/scripts/sortable.js"></script>
 </head>
-
 <body>
   <!-- sidebar w/ profile icon -->
   <div class="sidebar">
@@ -32,42 +28,21 @@
       <a href="/edit"><img src="https://i.ibb.co/55wr5sW/profile-icon.png" alt="profile-icon"></a>
     </aside>
   </div>
-
   <!-- tasks view here -->
   <main class="container">
     <!-- the button to add a task -->
     <div class="add-task">
       <!-- <form action="/tasks" method="POST" id="tasksform">  -->
-        <textarea name="text-box" id="text-box"></textarea>
       <button name="task" class="task-button"><i class="fas fa-feather fa-lg"></i></button>
       <!-- </form> -->
     </div>
-
-
     <!-- the div for the 4 category cards -->
     <div class="cards">
-
       <!-- this is the to watch card -->
       <section class="category-card">
         <h5>things to watch</h5>
         <ul id="towatch">
-          <script>
-            $(document).ready(() => {
-              $.ajax({
-                method: 'GET',
-                url: "/tasks",
-                success: (data) => {
-                  const result = [];
-                  for (const task of data) {
-                    result.push(`<li>${task.name}</li>`);
-                    $("#towatch").html(result);
-                  }
-                },
-              });
-            })
-          </script>
         </ul>
-
       </section>
       <!-- this is the to eat card -->
       <div class="category-card">
@@ -105,35 +80,7 @@
         <!-- this will eventually be a section like this:
           <section class="to-buy-list"></section> -->
       </div>
-
     </div>
-
-
   </main>
-
 </body>
-  <!-- <script>$(window).ready(function() {
-    $(".task-button").click(function() {
-      // console.log(window.getElementById("task-text-1"))
-      console.log($('#text-box').val())        });              });
-</script> -->
-
-      <!-- <script>  $(() => {
-            $('.task-button').on("click", function(event) {
-              // event.preventDefault();
-              console.log(document.getElementById("task-text-1").value)
-              console.log($('#task-text-1').val())
-
-              let data = $("#task-text-1").serialize().replace("text=", "");
-              console.log(data)
-              // postTweet(data);
-
-
-              // clears task area
-              $("#task-text-1").val('');
-            })
-          });
-
-</script> -->
-<script type="text/javascript" src="/scripts/sortable.js"></script>
 </html>
