the post will work here

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,10 +37,10 @@
   <main class="container">
     <!-- the button to add a task -->
     <div class="add-task">
-      <!-- <form action="/tasks" method="POST" id="tasksform">  -->
+      <form action="/tasks" method="POST" id="tasksform">
         <textarea name="text-box" id="text-box"></textarea>
       <button name="task" class="task-button"><i class="fas fa-feather fa-lg"></i></button>
-      <!-- </form> -->
+      </form>
     </div>
 
 
